<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_colour2"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/BackEditBtn"
        android:background="@android:color/holo_red_light"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/SubmitEditBtn"
        app:layout_constraintTop_toBottomOf="@+id/EditPassword" />

    <Button
        android:id="@+id/EditPasswordBtn"
        android:layout_width="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/EditPasswordBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/EditPassword"
        app:layout_constraintTop_toBottomOf="@+id/EditEmailBtn" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:text="@string/EditName"
        app:layout_constraintEnd_toStartOf="@+id/EditNameBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/Profile"
        style="@style/DescFont"
        android:layout_width="82dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/PersonalDetail"
        style="@style/DescFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/PersonalDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Profile" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="255dp"
        android:layout_height="166dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/EditIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PersonalDetail"
        app:srcCompat="@drawable/editprofile" />

    <EditText
        android:id="@+id/editBirhtOfDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="datetime"
        android:text="@string/EditBirthdOfDate"
        app:layout_constraintEnd_toStartOf="@+id/editBirthdaybtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <EditText
        android:id="@+id/EditEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/EditEmail"
        app:layout_constraintEnd_toStartOf="@+id/EditEmailBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditPhone" />

    <EditText
        android:id="@+id/EditPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:singleLine="true"
        android:text="@string/EditPassword"
        app:layout_constraintEnd_toStartOf="@+id/EditPasswordBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditEmail" />

    <Button
        android:id="@+id/editBirthdaybtn"
        android:layout_width="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/EditBirthdayBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editBirhtOfDate"
        app:layout_constraintTop_toBottomOf="@+id/EditNameBtn" />

    <Button
        android:id="@+id/EditNameBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/EditNameBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editName"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/EditPhoneBtn"
        android:layout_width="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/EditPhoneBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/EditPhone"
        app:layout_constraintTop_toBottomOf="@+id/editBirthdaybtn" />

    <Button
        android:id="@+id/EditEmailBtn"
        android:layout_width="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/EditEmailBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/EditEmail"
        app:layout_constraintTop_toBottomOf="@+id/EditPhoneBtn" />

    <Button
        android:id="@+id/SubmitEditBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/SubmitEditBtn"
        android:background="@android:color/holo_red_light"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditPassword" />

    <EditText
        android:id="@+id/EditPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/EditPhone"
        app:layout_constraintEnd_toStartOf="@+id/EditPhoneBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBirhtOfDate" />

</androidx.constraintlayout.widget.ConstraintLayout>