<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="@drawable/background_colour"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/TitleFont"
        android:layout_width="274dp"
        android:layout_height="32dp"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="@dimen/margins_height"
        android:layout_marginEnd="@dimen/margin_wide"
        android:fontFamily="@font/roboto_bold"
        android:lineSpacingExtra="10dp"
        android:text="@string/PopularFerryCompanies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="197dp"
        android:layout_height="269dp"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="@dimen/margin_wide"
        android:contentDescription="@string/FerryTaleIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ship" />

    <TextView
        android:id="@+id/textView6"
        style="@style/DescFont"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/DefaultDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button5"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/round_button"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:onClick="DesButtonClick4"
        android:text="@string/FerryTaleDescription4"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/RegisterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/round_button"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:onClick="DesButtonClick3"
        android:text="@string/FerryTaleDescription3"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/RegisterButton"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/round_button"
        android:onClick="@string/DesButtonClick1"
        android:text="@string/FerryTaleDescription1"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/RegisterButton"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/round_button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/round_button"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:onClick="DesButtonClick2"
        android:text="@string/FerryTaleDescription2"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/RegisterButton"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="@dimen/margin_wide"
        android:text="@string/JoinButton"
        android:background="@android:color/holo_red_light"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/LoginButton"
        style="@android:style/Widget.DeviceDefault.Light.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/LoginButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterButton" />


</androidx.constraintlayout.widget.ConstraintLayout>