<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".CalendarDatePicker"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:text="@string/EditName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/Profile"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/PersonalDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/PersonalDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Profile" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="255dp"
        android:layout_height="166dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/EditIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PersonalDetail"
        app:srcCompat="@drawable/profile" />

    <EditText
        android:id="@+id/editBirhtday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="datetime"
        android:text="@string/EditBirthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName"
        tools:text="Birthday" />

    <Button
        android:id="@+id/editBirthdaybtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EditBirthdayBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editBirhtday"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/EditNameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EditNameBtn"
        tools:layout_editor_absoluteX="318dp"
        tools:layout_editor_absoluteY="291dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="390dp" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RadioButton"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="410dp" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RadioButton"
        tools:layout_editor_absoluteX="211dp"
        tools:layout_editor_absoluteY="409dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:text="TextView"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="442dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="460dp" />
</androidx.constraintlayout.widget.ConstraintLayout>